Fix image overlap issue

--- a/react-src/src/App.css
+++ b/react-src/src/App.css
@@ -411,6 +411,11 @@ code {
   color: #646464;
 }
 
+.wp-block-image img {
+  width: 100%;
+  height: 100%;
+}
+
 .bubble {
   margin: 0 16px 0 4px;
   font-size: xx-large;
